[package]
name = "gnunet-rs"
version = "0.0.0"
description = "Unofficial Rust bindings for the Gnunet API."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
keywords = ["gnunet"]
categories = []
readme = "README.md"
repository = "https://github.com/bamilab/gnunet-rs"

[lib]
name = "gnunet"
path = "src/lib.rs"

[features]
cadet = ["gnunet-sys/cadet"]
fs = ["gnunet-sys/fs"]
peerstore = ["gnunet-sys/peerstore"]

[dependencies]
async-std = "^1.9"
gnunet-sys = { path = "../gnunet-sys", version = "0.0" }
serde = "^1.0"
