[package]
name = "gnunet-async"
version = "0.0.2"
description = "Unofficial async Rust bindings for the Gnunet API."
edition = "2018"
authors = ["Danny de Jong"]
license = "MIT"
publish = true
keywords = ["gnunet"]
categories = []
readme = "README.md"
repository = "https://github.com/bamilab/gnunet-rs"

[lib]
name = "gnunet"
path = "src/lib.rs"

[features]
single_threaded = []

[dependencies]
async-std = "^1.9"
bincode = "^1.0"
gnunet-sys = { path = "../gnunet-sys", version = "0.0.4" }
rst = "0.4"
serde = "^1.0"
